MorphyIMG - Changelog
====================

Version 2.1.1 - 2024-12-19
==========================

CRITICAL BUG FIXES:
- Fixed CSV to EPUB single conversion API call - was passing format as second parameter instead of in options object
- This was causing the routing to fail and fall back to generic /api/convert endpoint
- Fixed CSV to EPUB response handling - was expecting {success, downloadPath} but API returns {blob, filename, size}
- Fixed CSV to EPUB batch conversion to use specific convertBatchCsvToEpub method for proper filenames

Frontend Updates:
- Fixed CSV to EPUB single conversion routing
- Added proper null safety checks for batch conversion
- Updated API service to use correct endpoints
- Improved error handling in CSV to EPUB converter

Backend Updates:
- Enhanced CSV to EPUB conversion with hybrid approach
- Added Calibre support for better EPUB generation
- Improved Python script error handling
- Fixed file path issues in conversion scripts

Bug Fixes:
- Fixed "Cannot read properties of undefined" error in batch mode
- Resolved routing issues for CSV to EPUB conversions
- Fixed null pointer exceptions in file processing

Performance Improvements:
- Optimized CSV processing for large files
- Improved memory usage in batch conversions
- Enhanced error logging and debugging

Technical Details:
- Updated api.ts with proper CSV to EPUB routing
- Enhanced CSVToEPUBConverter.tsx with null safety
- Improved backend server.ts conversion logic
- Added comprehensive error handling

Deployment Notes:
- All changes are ready for production deployment
- No breaking changes to existing functionality
- Backward compatible with current API structure